monguito-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monguito-db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monguito-db
  template:
    metadata:
      labels:
        app: monguito-db
    spec:
      containers:
        - name: monguito
          image: mongo:lastest
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
