appm-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appm-svc
spec:
  type: ClusterIP
  selector:
    app: music-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
