monguito-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: monguito-svc
spec:
  type: ClusterIP
  selector:
    app: monguito-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
